# umlayer

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  main.py  requirements.txt  run_win.cmd  setup.cfg
tests/: test_model.py
umlayer/: __init__.py  __main__.py  composition_root.py  main.py  run.py
umlayer/adapters/: __init__.py  gui_adapters.py  standard_item.py  standard_item_model.py  tree_sort_model.py
umlayer/examples/: umlayer.ulr
umlayer/gui/: __init__.py  actions.py  actor_element.py  app.py  base_element.py  class_element.py  constants.py  ellipse_element.py  export_scene.py  graphics_scene.py  graphics_view.py  gui_logic.py  gui_utils.py  handle_element.py  handle_item.py  handler.py  item_roles.py  line_element.py  line_handle_item.py  line_icons_proxy_stype.py  mainwindow.py  note_element.py  package_element.py  resizable_element.py  resize_handle_item.py  scene_logic.py  settings.py  simple_class_element.py  standard_item_model.py  text_element.py  text_item.py  tips.py  tree_sort_model.py  tree_view.py  use_case_element.py  user_element.py
umlayer/model/: __init__.py  actor_model.py  base_item.py  constants.py  data_model.py  diagram.py  element.py  folder.py  node.py  project.py  project_item_type.py  project_logic.py  project_storage.py  scene_logic.py  user_element_model.py  utils.py
umlayer/spikes/: alchemy.py  resize_group.py  resize_object.py  resize_poly.py  resize_rect.py  use_case_element.py
umlayer/storage/: __init__.py  project_storage_impl.py
umlayer/usecases/: __init__.py  interactors.py  project_interactor.py  project_storage.py  (+1 more)
