[metadata]
name = umlayer
version = attr: umlayer.version.__version__
keywords = uml, editor, pyside6
license = MIT License
license_files = LICENSE.txt
description = UMLayer is a small UML diagram editor inspired by UMLet
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/selforthis/umlayer
author = Serguei Yanush
author_email = syanush@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    INTENDED AUDIENCE :: END USERS/DESKTOP
    TOPIC :: MULTIMEDIA :: GRAPHICS :: EDITORS :: VECTOR-BASED
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
include_package_data=True
python_requires = >=3.9, <4
install_requires =
    PySide6
    jsonpickle
    SQLAlchemy
    typing-extensions
project_urls =
    Source = https://github.com/selforthis/umlayer

[options.extras_require]
test =
    unittest
